change site description color for contrast issues

--- a/static/styles.css
+++ b/static/styles.css
@@ -67,7 +67,7 @@ hr {
 
 .site-description {
   font-size: 14px;
-  color: gray;
+  color: #555555;
   max-width: 450px;
   margin: 0 auto;
   padding-bottom: 30px;
